# detectOnVideo

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  QCaptureReader.cpp  QCaptureReader.h  QONNXLoader.cpp  QONNXLoader.h  QVideoPlayer.cpp  QVideoPlayer.h  README.md  main.cpp  resources.qrc
qml/: ONNXLoader.qml  Setting.qml
